neo/cnvrhi/cnvrhi.h

void c_nvrhi_commandList_open(nvrhi::ICommandList* commandList);
void c_nvrhi_commandList_close(nvrhi::ICommandList* commandList);
void c_nvrhi_commandList_clearDepthStencilTexture(
		nvrhi::ICommandList* commandList,
		nvrhi::ITexture* t,
		nvrhi::TextureSubresourceSet subresources,
		bool clearDepth,
		float depth,
		bool clearStencil,
		uint8_t stencil);
void c_nvrhi_commandList_beginTrackingTextureState(
		nvrhi::ICommandList* commandList,
		nvrhi::ITexture* texture,
		nvrhi::TextureSubresourceSet subresources,
		nvrhi::ResourceStates stateBits);
void c_nvrhi_commandList_writeTexture(
		nvrhi::ICommandList* commandList,
		nvrhi::ITexture* dest,
		uint32_t arraySlice,
		uint32_t mipLevel,
		const void* data,
		size_t rowPitch,
		size_t depthPitch);
void c_nvrhi_commandList_setPermanentTextureState(
		nvrhi::ICommandList* commandList,
		nvrhi::ITexture* texture,
		nvrhi::ResourceStates stateBits);
void c_nvrhi_commandList_beginTrackingBufferState(
		nvrhi::ICommandList* commandList,
		nvrhi::IBuffer* buffer,
		nvrhi::ResourceStates stateBits);
void c_nvrhi_commandList_writeBuffer(
		nvrhi::ICommandList* commandList,
		nvrhi::IBuffer* b,
		const void* data,
		size_t dataSize,
		uint64_t destOffsetBytes);
void c_nvrhi_commandList_setPermanentBufferState(
		nvrhi::ICommandList* commandList,
		nvrhi::IBuffer* buffer,
		nvrhi::ResourceStates stateBits);
void c_nvrhi_commandList_commitBarriers(nvrhi::ICommandList* commandList);
void c_nvrhi_commandList_draw(nvrhi::ICommandList* commandList, const nvrhi::DrawArguments* args);
void c_nvrhi_commandList_drawIndexed(nvrhi::ICommandList* commandList, const nvrhi::DrawArguments* args);
void c_nvrhi_commandList_setPushConstants(
		nvrhi::ICommandList* commandList,
		const void* data,
		size_t byteSize);
void c_nvrhi_commandList_setGraphicsState(
		nvrhi::ICommandList* commandList,
		const nvrhi::GraphicsState* state);
// vulkan

VkFormat c_nvrhi_vulkan_convertFormat(nvrhi::Format format);
void c_nvrhi_vulkan_createDevice(
		const nvrhi::vulkan::DeviceDesc* desc,
		nvrhi::DeviceHandle* handle,
		PFN_vkGetInstanceProcAddr vkGetInstanceProcAddr);
void c_nvrhi_vulkan_device_queueSignalSemaphore(
		nvrhi::vulkan::IDevice* device,
		nvrhi::CommandQueue executionQueue,
		VkSemaphore semaphore,
		uint64_t value);
void c_nvrhi_vulkan_device_queueWaitForSemaphore(
		nvrhi::vulkan::IDevice* device,
		nvrhi::CommandQueue waitQueue,
		VkSemaphore semaphore,
		uint64_t value);
// utils

nvrhi::BufferDesc c_nvrhi_utils_createVolatileConstantBufferDesc(
		uint32_t byteSize,
		const char* debugName,
		uint32_t maxVersions);
void c_nvrhi_utils_clearColorAttachment(
		nvrhi::ICommandList* commandList,
		nvrhi::IFramebuffer* framebuffer,
		uint32_t attachmentIndex,
		nvrhi::Color color);