neo/ztech/renderer/nvrhi.zig


    // Minimum size of memory chunks created to upload data to the device on DX12.
    uploadChunkSize: usize = 64 * 1024,

    // Minimum size of memory chunks created for AS build scratch buffers.
    scratchChunkSize: usize = 64 * 1024,

    // Maximum total memory size used for all AS build scratch buffers owned by this command list.
    scratchMaxMemory: usize = 1024 * 1024 * 1024,

    // Type of the queue that this command list is to be executed on.
    // COPY and COMPUTE queues have limited subsets of methods available.
    queueType: CommandQueue = CommandQueue.Graphics,
};

pub const DrawArguments = extern struct {
    vertexCount: u32 = 0,
    instanceCount: u32 = 1,
    startIndexLocation: u32 = 0,
    startVertexLocation: u32 = 0,
    startInstanceLocation: u32 = 0,
};

pub const ICommandList = opaque {
    extern fn c_nvrhi_commandList_setGraphicsState(*ICommandList, *const GraphicsState) void;
    extern fn c_nvrhi_commandList_draw(*ICommandList, *const DrawArguments) void;
    extern fn c_nvrhi_commandList_drawIndexed(*ICommandList, *const DrawArguments) void;
    extern fn c_nvrhi_commandList_setPushConstants(*ICommandList, *const anyopaque, usize) void;
    extern fn c_nvrhi_commandList_open(*ICommandList) void;
    extern fn c_nvrhi_commandList_close(*ICommandList) void;
    extern fn c_nvrhi_commandList_clearDepthStencilTexture(
        *ICommandList,
        *ITexture,
        TextureSubresourceSet,
        bool,
        f32,
        bool,
        u8,
    ) void;
    extern fn c_nvrhi_commandList_beginTrackingTextureState(
        *ICommandList,
        *ITexture,
        TextureSubresourceSet,
        ResourceStates,
    ) void;
    extern fn c_nvrhi_commandList_writeTexture(
        *ICommandList,
        *ITexture,
        u32,
        u32,
        [*]const u8,
        usize,
        usize,
    ) void;
    extern fn c_nvrhi_commandList_setPermanentTextureState(
        *ICommandList,
        *ITexture,
        ResourceStates,
    ) void;
    extern fn c_nvrhi_commandList_commitBarriers(*ICommandList) void;
    extern fn c_nvrhi_commandList_setPermanentBufferState(
        *ICommandList,
        *IBuffer,
        ResourceStates,
    ) void;
    extern fn c_nvrhi_commandList_beginTrackingBufferState(
        *ICommandList,
        *IBuffer,
        ResourceStates,
    ) void;
    extern fn c_nvrhi_commandList_writeBuffer(
        *ICommandList,
        *IBuffer,
        ?[*]const u8,
        usize,
        u64,
    ) void;

    pub fn open(command_list: *ICommandList) void {
        c_nvrhi_commandList_open(command_list);
    }

    pub fn close(command_list: *ICommandList) void {
        c_nvrhi_commandList_close(command_list);
    }

    pub fn commitBarriers(command_list: *ICommandList) void {
        c_nvrhi_commandList_commitBarriers(command_list);
    }

    pub fn beginTrackingTextureState(
        command_list: *ICommandList,
        texture: *ITexture,
        subresources: TextureSubresourceSet,
        state_bits: ResourceStates,
    ) void {
        c_nvrhi_commandList_beginTrackingTextureState(
            command_list,
            texture,
            subresources,
            state_bits,
        );
    }

    pub fn writeTexture(
        command_list: *ICommandList,
        dest: *ITexture,
        array_slice: u32,
        mip_level: u32,
        data: [*]const u8,
        row_pitch: usize,
        depth_pitch: usize,
    ) void {
        c_nvrhi_commandList_writeTexture(
            command_list,
            dest,
            array_slice,
            mip_level,
            data,
            row_pitch,
            depth_pitch,
        );
    }

    pub fn setPermanentTextureState(
        command_list: *ICommandList,
        texture: *ITexture,
        state_bits: ResourceStates,
    ) void {
        c_nvrhi_commandList_setPermanentTextureState(command_list, texture, state_bits);
    }

    pub fn beginTrackingBufferState(
        command_list: *ICommandList,
        buffer: *IBuffer,
        state_bits: ResourceStates,
    ) void {
        c_nvrhi_commandList_beginTrackingBufferState(command_list, buffer, state_bits);
    }

    pub fn writeBuffer(
        command_list: *ICommandList,
        buffer: *IBuffer,
        data: ?[*]const u8,
        data_size: usize,
        dest_offset_bytes: u64,
    ) void {
        c_nvrhi_commandList_writeBuffer(
            command_list,
            buffer,
            data,
            data_size,
            dest_offset_bytes,
        );
    }

    pub fn setPermanentBufferState(
        command_list: *ICommandList,
        buffer: *IBuffer,
        state_bits: ResourceStates,
    ) void {
        c_nvrhi_commandList_setPermanentBufferState(command_list, buffer, state_bits);
    }

    pub fn clearDepthStencilTexture(
        command_list: *ICommandList,
        t: *ITexture,
        subresources: TextureSubresourceSet,
        clear_depth: bool,
        depth: f32,
        clear_stencil: bool,
        stencil: u8,
    ) void {
        c_nvrhi_commandList_clearDepthStencilTexture(
            command_list,
            t,
            subresources,
            clear_depth,
            depth,
            clear_stencil,
            stencil,
        );
    }

    pub fn setGraphicsState(
        command_list: *ICommandList,
        state: *const GraphicsState,
    ) void {
        c_nvrhi_commandList_setGraphicsState(command_list, state);
    }

    pub fn draw(command_list: *ICommandList, args: *const DrawArguments) void {
        c_nvrhi_commandList_draw(command_list, args);
    }

    pub fn drawIndexed(command_list: *ICommandList, args: *const DrawArguments) void {
        c_nvrhi_commandList_drawIndexed(command_list, args);
    }

    pub fn setPushConstants(
        command_list: *ICommandList,
        data: *const anyopaque,
        byte_size: usize,
    ) void {
        c_nvrhi_commandList_setPushConstants(command_list, data, byte_size);
    }
};

pub const ResourceStates = packed struct(u32) {
    pub const unknown: ResourceStates = .{};

    Common: bool = false,
    ConstantBuffer: bool = false,
    VertexBuffer: bool = false,
    IndexBuffer: bool = false,
    IndirectArgument: bool = false,
    ShaderResource: bool = false,
    UnorderedAccess: bool = false,
    RenderTarget: bool = false,
    DepthWrite: bool = false,
    DepthRead: bool = false,
    StreamOut: bool = false,
    CopyDest: bool = false,
    CopySource: bool = false,
    ResolveDest: bool = false,
    ResolveSource: bool = false,
    Present: bool = false,
    AccelStructRead: bool = false,
    AccelStructWrite: bool = false,
    AccelStructBuildInput: bool = false,
    AccelStructBuildBlas: bool = false,
    ShadingRateSurface: bool = false,
    OpacityMicromapWrite: bool = false,
    OpacityMicromapBuildInput: bool = false,
    _reserved: u9 = 0,
};

pub const CpuAccessMode = enum(u8) {
    None,
    Read,
    Write,
};

pub const SharedResourceFlags = enum(u32) {
    None = 0,
    Shared = 0x01,
    Shared_NTHandle = 0x02,
    Shared_CrossAdapter = 0x04,
};

pub const BufferDesc = extern struct {
    byteSize: u64 = 0,
    structStride: u32 = 0,
    maxVersions: u32 = 0,
    debugName: CppString = std.mem.zeroes(CppString),
    format: Format = .UNKNOWN,
    canHaveUAVs: bool = false,
    canHaveTypedViews: bool = false,
    canHaveRawViews: bool = false,
    isVertexBuffer: bool = false,
    isIndexBuffer: bool = false,
    isConstantBuffer: bool = false,
    isDrawIndirectArgs: bool = false,
    isAccelStructBuildInput: bool = false,
    isAccelStructStorage: bool = false,
    isShaderBindingTable: bool = false,
    isVolatile: bool = false,
    isVirtual: bool = false,
    initialState: ResourceStates = .{ .Common = true },
    keepInitialState: bool = false,
    cpuAccess: CpuAccessMode = .None,
    sharedResourceFlags: SharedResourceFlags = .None,
};

pub const FramebufferAttachment = extern struct {
    texture: ?*ITexture = null,
    subresources: TextureSubresourceSet = .{},
    format: Format = .UNKNOWN,
    isReadOnly: bool = false,

    pub inline fn valid(attach: *const FramebufferAttachment) bool {
        return attach.texture != null;
    }
};

pub const FramebufferDesc = extern struct {
    pub const ColorAttachments = static_vector(FramebufferAttachment, c_MaxRenderTargets);

    colorAttachments: ColorAttachments = .{},
    depthAttachment: FramebufferAttachment = .{},
    shadingRateAttachment: FramebufferAttachment = .{},
};

pub const utils = struct {
    extern fn c_nvrhi_utils_createVolatileConstantBufferDesc(
        u32,
        [*:0]const u8,
        u32,
    ) BufferDesc;

    extern fn c_nvrhi_utils_clearColorAttachment(
        *ICommandList,
        *IFramebuffer,
        u32,
        Color,
    ) void;

    pub fn createVolatileConstantBufferDesc(
        byte_size: u32,
        debug_name: [:0]const u8,
        max_versions: u32,
    ) BufferDesc {
        return c_nvrhi_utils_createVolatileConstantBufferDesc(
            byte_size,
            debug_name.ptr,
            max_versions,
        );
    }

    pub fn clearColorAttachment(
        command_list: *ICommandList,
        framebuffer: *IFramebuffer,
        attachment_index: u32,
        color: Color,
    ) void {
        c_nvrhi_utils_clearColorAttachment(
            command_list,
            framebuffer,
            attachment_index,
            color,
        );
    }
};

pub const IMessageCallback = opaque {};

pub const vulkan = struct {
    const c = @import("../sys/c_import.zig").c;

    pub const IVulkanDevice = opaque {
        extern fn c_nvrhi_vulkan_device_queueWaitForSemaphore(
            *IVulkanDevice,
            CommandQueue,
            c.VkSemaphore,
            u64,
        ) void;
        extern fn c_nvrhi_vulkan_device_queueSignalSemaphore(
            *IVulkanDevice,
            CommandQueue,
            c.VkSemaphore,
            u64,
        ) void;

        pub fn queueWaitForSemaphore(
            device: *IVulkanDevice,
            wait_queue: CommandQueue,
            semaphore: c.VkSemaphore,
            value: u64,
        ) void {
            c_nvrhi_vulkan_device_queueWaitForSemaphore(
                device,
                wait_queue,
                semaphore,
                value,
            );
        }

        pub fn queueSignalSemaphore(
            device: *IVulkanDevice,
            execution_queue: CommandQueue,
            semaphore: c.VkSemaphore,
            value: u64,
        ) void {
            c_nvrhi_vulkan_device_queueSignalSemaphore(
                device,
                execution_queue,
                semaphore,
                value,
            );
        }
    };

    pub const VulkanDeviceHandle = RefCountPtr(IVulkanDevice);

    extern fn c_nvrhi_vulkan_convertFormat(Format) c.VkFormat;
    extern fn c_nvrhi_vulkan_createDevice(
        *const DeviceDesc,
        *VulkanDeviceHandle,
        c.PFN_vkGetInstanceProcAddr,
    ) void;

    pub fn convertFormat(format: Format) c.VkFormat {
        return c_nvrhi_vulkan_convertFormat(format);
    }

    pub const DeviceDesc = extern struct {
        errorCB: ?*IMessageCallback = null,
        instance: c.VkInstance,
        physicalDevice: c.VkPhysicalDevice,
        device: c.VkDevice,
        graphicsQueue: c.VkQueue = null,
        graphicsQueueIndex: c_int = -1,
        transferQueue: c.VkQueue = null,
        transferQueueIndex: c_int = -1,
        computeQueue: c.VkQueue = null,
        computeQueueIndex: c_int = -1,
        allocationCallbacks: ?*c.VkAllocationCallbacks = null,
        instanceExtensions: ?[*][*:0]const u8 = null,
        numInstanceExtensions: usize = 0,
        deviceExtensions: ?[*][*:0]const u8 = null,
        numDeviceExtensions: usize = 0,
        maxTimerQuerues: u32 = 256,
        bufferDeviceAddressSupported: bool = false,
    };
